--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <h3 class="mb-2">My Hometown - Boring, Oregon</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5 align-items-center">
                         <div class="flex-grow-1">
-                            <img class="img-fluid p-4" style="width: auto;"src="./assets/img/mtHoodView.jpg">
+                            <img class="img-fluid p-4" style="width: auto;"src="./assets/img/OregonView.jpg">
                         </div>
                         <div class="border-top border-bottom p-3">
                             <p>My hometown is Boring, OR, and yes that is the actual name of the town. I'm currently down in Utah for school, but I do miss the greenery of Oregon.</p>
@@ -201,10 +201,7 @@
                         <li>C#</li>
                         <li>ASP.net</li>
                         <li>Tableau</li>
-                        <li>HTML/CSS</li>
-                        <li>Bootstrap</li>
                         <li>VBA (Excel)</li>
-                        <li>Pandas</li>
                         <li>Microsoft Azure</li>
                         <li>Django</li>
                     </ul>
@@ -217,6 +214,18 @@
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Python
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            HTML/CSS
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Bootstrap
+                        </li>
+                        <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Pandas
                         </li>
                     </ul>
                 </div>
