--- a/index.html
+++ b/index.html
@@ -232,20 +232,9 @@
               </h3>
               <div class="subheading mb-3">Bachelor of Science</div>
               <div>Information Systems Management</div>
-              <p>GPA: 3.48</p>
             </div>
             <div class="flex-shrink-0">
               <span class="text-primary">Sept 2022 - April 2024</span>
-            </div>
-          </div>
-          <div class="d-flex flex-column flex-md-row justify-content-between">
-            <div class="flex-grow-1">
-              <h3 class="mb-0">Mt Hood Community College</h3>
-              <div class="subheading mb-3">Associate of General Studies</div>
-              <p>GPA: 3.95</p>
-            </div>
-            <div class="flex-shrink-0">
-              <span class="text-primary">Sept 2015 - May 2017</span>
             </div>
           </div>
         </div>
@@ -375,6 +364,7 @@
             <li>AWS</li>
             <li>Microsoft Office</li>
             <li>Adobe Illustrator</li>
+            <li>Bootstrap</li>
           </ul>
           <div class="subheading mb-3">Proficient in</div>
           <ul class="fa-ul mb-0">
@@ -389,10 +379,6 @@
             <li>
               <span class="fa-li"><i class="fas fa-check"></i></span>
               HTML/CSS
-            </li>
-            <li>
-              <span class="fa-li"><i class="fas fa-check"></i></span>
-              Bootstrap
             </li>
           </ul>
         </div>
@@ -533,13 +519,6 @@
       <hr class="m-0" />
       <!-- Contact -->
 
-      <!--
-                <div class="subheading mb-5">
-                    865 N 160 W · Provo, UT 84604 · (971) 404-9065 ·
-                    <a href="mailto:name@email.com">pthoma24@byu.edu</a>
-                </div>
-            -->
-
       <section class="resume-section" id="contact">
         <div class="resume-section-content">
           <h2 class="mb-5">Contact</h2>
@@ -550,7 +529,9 @@
             </li>
             <li>
               <div class="subheading">Email:</div>
-              <p><a href="mailto:name@email.com">pthoma24@byu.edu</a></p>
+              <p>
+                <a href="mailto:name@email.com">porter_thomas@hotmail.com</a>
+              </p>
             </li>
           </ul>
         </div>
